fixed table overflow

--- a/tallerweb/angular-tallerweb/src/app/components/transaction-manager/transaction-manager.component.css
+++ b/tallerweb/angular-tallerweb/src/app/components/transaction-manager/transaction-manager.component.css
@@ -38,8 +38,7 @@ thead tr th {
 }
 
 .table-responsive {
-    height: 360px;
-    overflow-y: auto;
+    overflow: visible;
 }
 
 #settingIcon {
@@ -62,3 +61,4 @@ thead tr th {
     background-color: rgb(74, 74, 255);
     color: white;
 }
+
